# RentoEarn

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example  nixpacks.toml  package.json  pnpm-lock.yaml  setup.sh  tsconfig.json
apps/web/: next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/prisma/: schema.prisma  seed.ts
apps/web/public/uploads/: .gitkeep
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/coming-soon/: page.tsx
apps/web/src/lib/: auth.ts  authOptions.ts  redis.ts  solana.ts
apps/web/src/types/: next-auth.d.ts
apps/worker/: Dockerfile  package.json
apps/worker/src/: index.ts  queues.ts
apps/worker/src/jobs/: expiry.ts  keepAlive.ts  verifyInitial.ts
apps/worker/src/lib/: anchor.ts  evm.ts  notifications.ts  verification.ts
contracts/: foundry.toml  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/artifacts/contracts/BillboardMarket.sol/: BillboardMarket.dbg.json  BillboardMarket.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: BillboardMarket.sol
contracts/scripts/: deploy.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
contracts/typechain-types/contracts/: BillboardMarket.ts  index.ts
contracts/typechain-types/factories/contracts/: BillboardMarket__factory.ts  index.ts
keys/: billboard-program-keypair.json  devnet-deployer.json
programs/billboard_market/: Cargo.toml  package.json
programs/billboard_market/src/: lib.rs
programs/billboard_market/tests/: billboard_market.ts
(+85 files in other folders)
