[package]
name = "billboard_market"
version = "0.1.0"
description = "Billboard Market - X Profile Rental Marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "billboard_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
